<resources>
    <string name="app_name">NDP_Song_Compile</string>
    <string name="song_title">Song Title</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="singer">Singer</string>
    <string name="enter_singer_name_here">Enter singer name here</string>
    <string name="year">Year</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="show_all_songs_with_5_stars">Show all songs with 5 Stars</string>
    <string name="insert">Insert</string>
    <string name="show_list">Show List</string>
</resources>